<<<<<<< HEAD
syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.climate";
option java_outer_classname = "ClimateServiceImpl";

package climate;

service ClimateService {

	rpc showHvacStatus(HvacStatusRequest) returns (HvacResponse) {}; //Unary

	rpc setHvacTemp(TempRequest) returns (stream HvacResponse) {}; //server-side stream
	
	rpc checkCO (CoLevelRequest) returns ( ExtractionResponse) {}; //unary 
}

message Hvac{
	int32 HvacId = 1;
	string status = 2;
	int32 temperature = 3;
}

message HvacStatusRequest{
	int32 HvacId = 1;
}

message HvacResponse {
	Hvac hvac = 1;
}

message TempRequest {
	int32 HvacId = 1;
	int32 temperature = 2;
}

message CoLevel{
	string building = 1;
	int32 CoNow = 2;
}

message CoLevelRequest {
	string building = 1;
}

message ExtractionResponse {
	CoLevel coLevel = 1;
	
}


=======
syntax = "proto3";

option java_multiple_files = true;
option java_package = "services.climate";

package climate;

service ClimateUtility {

	rpc showHVACStatus(HVACStatusRequest) returns (HVACStatusResponse) {}; //Unary

	rpc setHVACtemp(stream TempRequest) returns (TempResponse) {}; //client-side stream
	
	rpc checkCO (stream CoLevelRequest) returns (stream CoLevelResponse) {}; //bidirecional-side stream
		
}

message HVACStatusRequest{
	int32 HVACId = 1;
}

message HVACStatusResponse {
	string status = 1;
}

message TempRequest {
	int32 HVACId = 1;
	int32 temperature = 2;
}

message TempResponse {
	string status = 1;
}

message CoLevelRequest {
	string building = 1;
	string room = 2;
}

message CoLevelResponse {
	double Colevel = 1;
	string HVACId = 2;
	
}


>>>>>>> 30520d2517acaf6dc5e0ec3ce0028e175347c53a
